# Sentinel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
configs/: default_config.json
include/sentinel/config/: AppConfig.hpp  ConfigManager.hpp
include/sentinel/core/: CoreEngine.hpp  Result.hpp
include/sentinel/interfaces/: IConfigurationProvider.hpp  IFileWatcher.hpp  ILogger.hpp  IRuleEngine.hpp
include/sentinel/logger/: Logger.hpp
src/: CMakeLists.txt
src/cli/: main.cpp
src/config/: ConfigManager.cpp
src/core/: CoreEngine.cpp
src/logger/: Logger.cpp
tests/: CMakeLists.txt  config_test.cpp  core_engine_test.cpp  logger_test.cpp
